# Sole-arium-GA-footwear

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI_AGENTS_INTEGRATION.md  CHANGELOG.md  DEPLOYMENT_READINESS_SUMMARY.md  DEVELOPMENT.md  Dockerfile  FIXES_APPLIED.md  Makefile  PHASE0_SUMMARY.md  PHASE1_IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  README.md  SETUP.md  STAGING_DEPLOYMENT.md  START_HERE.md  TASK1_COMPLETION_CHECKLIST.md  TASK2_COMPLETION_SUMMARY.md  TASK3_INGESTION_PLAN.md  TASK8_COMPLETION_SUMMARY.md  demo.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  startup.bat  startup.sh
.github/workflows/: ci.yml
configs/: pipeline.yaml  rules.yaml  thresholds.yaml
docs/: 00_START_HERE.md  API_AND_SCHEMA.md  ARCHITECTURE.md  BUILD_FLOW_SUMMARY.md  DATA_CAPTURE_PROTOCOL.md  DATA_FLOW.md  ENGINEERING_RULES.md  IMPLEMENTATION_PLAYBOOK.md  PRD.md  PRIVACY_COMPLIANCE.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TECHNICAL_ARCHITECTURE.md  VALIDATION_QA.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: KinematicCharts.jsx  Shoe3DVisualization.jsx  ShoeVisualization.jsx
frontend/src/pages/: ResultsPage.jsx  UploadPage.jsx
frontend/src/services/: api.js
scripts/: init-db.sql
src/gait/: __init__.py
src/gait/agents/: __init__.py  base.py  health_coach.py  prescription_agent.py
src/gait/analysis/: __init__.py  advanced_metrics.py  analyzer.py  biomechanics.py  parameters.py  realtime_processor.py  session_report.py  three_d_reconstruction.py
src/gait/api/: __init__.py  health.py  main.py  metrics.py  models.py  session_store.py  tasks.py
src/gait/app/: __init__.py  viewer.py
src/gait/auth/: __init__.py  api_key_manager.py  dependencies.py  exceptions.py  jwt_handler.py  password_utils.py
src/gait/cache/: __init__.py  base.py  dependencies.py  redis_cache.py
src/gait/capture/: __init__.py
src/gait/common/: __init__.py  geometry.py  interfaces.py  logging_utils.py  types.py
src/gait/config/: __init__.py  settings.py
src/gait/db/: __init__.py  models.py  session_repo.py
src/gait/error_tracking/: __init__.py  sentry_config.py
src/gait/events/: __init__.py  gait_event_detector.py  velocity_detector.py
src/gait/ingestion/: __init__.py  calibrate.py  calibration.py  decode.py  preprocessor.py  roi.py  segment_bg.py  static_trial.py  sync.py  track.py
src/gait/monitoring/: __init__.py  dependencies.py  health.py  metrics.py  middleware.py
src/gait/optimization/: __init__.py  cache_manager.py  fast_path.py  profiler.py  vectorization.py
src/gait/pipeline/: __init__.py  config.py  orchestrator.py
src/gait/pose/: __init__.py  estimator.py  mediapipe_detector.py  smoother.py
src/gait/privacy/: __init__.py  face_blur.py
src/gait/profile/: __init__.py  builder.py  gating.py  prescription_engine.py  rules_engine.py  schema.py
src/gait/rate_limit/: __init__.py  base.py  dependencies.py  token_bucket.py
src/gait/storage/: __init__.py  base.py  factory.py  minio_storage.py  s3_storage.py
src/gait/validation/: __init__.py  anomaly_detector.py  (+3 more)
tests/: conftest.py
tests/fixtures/: synthetic_data.py
tests/integration/: test_api.py  test_ingestion_pipeline.py
tests/unit/: test_advanced_analysis.py  test_analysis_analyzer.py  test_analysis_parameters.py  test_api_models.py  test_auth_api_key.py  test_auth_jwt.py  test_auth_password.py  test_cache.py  test_clinical_validation.py  test_config.py  test_db_models.py  test_db_session_repo.py  test_error_tracking.py  test_events_detector.py  test_example.py  test_face_blur.py  test_frontal_plane_excursion_asymmetry.py  test_gait_analysis.py  test_geometry.py  test_health_coach_with_fallback.py  test_ingestion_calibrate.py  test_ingestion_decode.py  test_ingestion_roi.py  test_ingestion_segment_bg.py  test_ingestion_track.py  test_monitoring.py  test_optimization.py  test_pipeline_end_to_end_step_lengths.py  test_pose_estimator.py  test_pose_mediapipe.py  test_pose_smoother.py  test_prescription_spec.py  test_profile_builder.py  test_profile_rules.py  test_rate_limit.py  test_rearfoot_alignment_fpa_fixes.py  test_schema.py  test_step_length_clinically_correct.py  test_storage.py
