[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gait-analysis"
version = "0.1.0"
description = "Gait Analysis Module - Transforming synchronized video into structured patient profiles"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Moinak Mondal", email = "moinak.mondal057@gmail.com"}
]
license = {text = "MIT"}
keywords = ["gait-analysis", "biomechanics", "orthopedics", "video-analysis"]

dependencies = [
    # Computer Vision
    "opencv-python>=4.8.0",
    "mediapipe>=0.14.0",

    # ML & Data Processing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",

    # Data Validation & Serialization
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jsonschema>=4.19.0",

    # Web Framework & API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",

    # Task Queue & Background Jobs
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Database & ORM
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",

    # File Storage
    "boto3>=1.28.0",
    "minio>=7.1.0",

    # Authentication & Security
    "pyjwt>=2.8.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",

    # Caching & Rate Limiting
    "cachetools>=5.3.0",

    # Monitoring & Error Tracking
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.17.0",
    "sentry-sdk>=1.32.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.24.0",

    # Linting & Formatting
    "black>=23.9.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",

    # Pre-commit
    "pre-commit>=3.4.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",

    # Development
    "ipython>=8.15.0",
    "ipdb>=0.13.0",
]

frontend = [
    "streamlit>=1.28.0",
]

[project.urls]
Repository = "https://github.com/sole-arium/gait-analysis"
Documentation = "https://docs.sole-arium.com"
Issues = "https://github.com/sole-arium/gait-analysis/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "W191",  # indentation contains tabs
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mediaipe.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src/gait --cov-report=html --cov-report=term-missing --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow running tests",
]

[tool.coverage.run]
branch = true
source = ["src/gait"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
